--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "dependencies": {
     "emotion": "^10.0.17",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.0",
     "eslint-plugin-babel": "^5.3.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.10.2",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
